## Process this file with automake to produce Makefile.in
##AM_CFLAGS=-g -Wall

bin_PROGRAMS = psuart
psuart_INCLUDES = $(PSRLIB_INC)
psuart_SOURCES = ../../src/psuservice.c ../../src/ini.c ../../src/utils.c ../../src/xLogMessage.c ../../src/ringBuffer.c ../../src/rader.c
psuart_LDADD = @LIBOBJS@  


